# eunomio

./: .gitignore  ARCHITECTURE.md  BRAND.md  CONTEXT.md  Cargo.toml  HOSTED_DEPLOYMENT.md  README.md  SECURITY.md  SPEC.md  TASKS.md  dev.sh  package-lock.json  package.json  share.sh  start-worker.sh  tunnel.sh
.cursor/rules/: manual-mode-always.mdc
.cursor/subagents/: prompt-analyst.md
backend/: Cargo.toml  build.rs
backend/src/: branching.rs  coordinator.rs  credentials.rs  cursor_bridge.rs  db.rs  edges.rs  embed.rs  error.rs  git.rs  launch.rs  lib.rs  main.rs  mock_partition.rs  partition_settings.rs  process_util.rs  repo_store.rs  server.rs  sessions.rs  sse.rs  state.rs  synthesized_content.rs  tunnel.rs  types.rs  worktree.rs
backend/src/auth/: audit.rs  csrf.rs  handlers.rs  local.rs  middleware.rs  mod.rs  principal.rs  session.rs
backend/src/cli/: mod.rs  subagent_run.rs
backend/src/coordinator/: accept.rs  begin.rs  constructor_outcome.rs  gates.rs  mod.rs  prompt.rs  recovery.rs  run_loop.rs  scope.rs
backend/src/cursor_bridge/: fake.rs  fold.rs  helper_assets.rs  helper_stdio.rs  list_models.rs  mod.rs  runner.rs  wire.rs
backend/src/github/: mod.rs
backend/src/middleware/: host_guard.rs  mod.rs
backend/src/repo/: mod.rs  node.rs  org.rs  partition.rs  run.rs  session.rs  tree.rs  user.rs
backend/src/subagents/: constructor.rs  loader.rs  mod.rs  planner.rs  surveyor.rs
backend/src/tunnel/: auth.rs  install.rs  mod.rs  process.rs
backend/src/types/: api.rs  events.rs  mod.rs  partition.rs  run.rs  settings.rs
backend/tests/: auth.rs  bare_ref_resolve.rs  coordinator.rs  credentials.rs  end_to_end.rs  idempotent_create.rs  launch.rs  mock_partition.rs  partition_settings.rs  tenancy.rs  validate_session.rs
backend/tests/common/: app.rs  fixture.rs  git.rs  http.rs  mod.rs
crates/eunomio-auth-local/: Cargo.toml
crates/eunomio-auth-local/src/: lib.rs
crates/eunomio-bin-local/: Cargo.toml
crates/eunomio-bin-local/src/: lib.rs  main.rs
crates/eunomio-bin-local/src/cli/: mod.rs  subagent_run.rs
crates/eunomio-bin-local/tests/: auth.rs  bare_ref_resolve.rs  coordinator.rs  credentials.rs  end_to_end.rs  idempotent_create.rs  launch.rs  partition_settings.rs  tenancy.rs  validate_session.rs
crates/eunomio-bin-local/tests/common/: app.rs  db.rs  fixture.rs  git.rs  http.rs  mod.rs
crates/eunomio-core/: Cargo.toml
crates/eunomio-helper-protocol/: Cargo.toml
crates/eunomio-keystore-file/: Cargo.toml
crates/eunomio-sqlite/: Cargo.toml
crates/eunomio-sqlite/src/: db.rs  display.rs  lib.rs
crates/eunomio-sqlite/src/repo/: auth_event.rs  auth_session.rs  diff_authorization.rs  edge_file_viewed.rs  mod.rs  node.rs  node_reviewed.rs  org.rs  partition.rs  run.rs  session.rs  shaver_run.rs  shaving_track.rs  user.rs
docs/: README.md  next.config.mjs  package-lock.json  package.json  script.md  site.config.ts
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
helper/: build.mjs  package-lock.json  package.json
scripts/: add-spdx-headers.sh  check-spdx-headers.sh  dev.mjs  transform-sqlite-repos.py
subagents/: constructor.md  planner.md  reorder.md  shaver.md  surveyor.md
tasks/: README.md  canonical-node-review-history.md  ci-license-check.md  pr-cohesion-analysis.md  session-layout-refactor.md  shavings.md  sqlite-sqlx-driver.md  turn-ended-usage.md
(+216 files in other folders)
