[package]
name = "eunomio"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "eunomio"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-rusqlite = "0.5"
rusqlite = { version = "0.31", features = ["bundled"] }
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
getrandom = "0.2"
regex = "1"
async-trait = "0.1"
nix = { version = "0.29", features = ["signal"] }
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
http-body-util = "0.1"
