[package]
name = "eunomio-auth-local"
version = "0.1.0"
edition = "2021"

[dependencies]
eunomio-core = { path = "../eunomio-core" }
async-trait = "0.1"
base64 = "0.22"
getrandom = "0.2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
