[package]
name = "eunomio-sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
eunomio-core = { path = "../eunomio-core" }
tokio-rusqlite = "0.5"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
